Change design to four cards add newsletter

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div id="features">
       <div class="feature row1">
         <div class="center">
-          <div class="image-container img1">
+          <div class="image-container">
             <img src="./images/ice-cream-hand-square.jpg" alt="Someone holding an ice cream cone.">
           </div>
           <div="content">
@@ -92,7 +92,7 @@
 
       <div class="feature row2">
         <div class="center">
-          <div class="image-container img2">
+          <div class="image-container">
             <img src="./images/pistaschio-ice-cream-square.jpg" alt="A close-up of pistaschio ice cream.">
           </div>
           </div>
@@ -103,39 +103,54 @@
             </p>
       
       </div>
-    </div>
-  
-
-
-
-  <!-- community -->
-  <div id="community">
-    <div class="community-container row">
-      <div class="community-sign-up"><img src="./images/ice-cream-flavors.jpg" alt="A lot of ice cream flavors."></div>
-      <p>Looking for a scoop of camaraderie? Connect with fellow ice cream aficionados and join the Twemary community
-        today!
-        Make every moment a sweet one!</p>
-    </div>
-  </div>
 </div>
 
-<!-- rewards -->
-   <div id="features">
+    <div id="features2">
+      <div class="feature row3">
+        <div class="center">
+          <div class="image-container">
+            <img src="./images/ice-cream-flavors-square.jpg" alt="A lot of ice cream flavors.">
+          </div>
+          </div>
+          <div="content">
+            <p>Looking for a scoop of camaraderie? Connect with fellow ice cream aficionados and join the Twemary community
+        today!
+        Make every moment a sweet one!
+            </p>
+      </div>
+
+
       <div class="feature row4">
         <div class="center">
-          <div class="image-container img1">
-            <img src="./images/ice-cream-hand.jpg" alt="Someone holding an ice cream cone.">
+          <div class="image-container">
+            <img src="./images/ice-cream-celebration-square.jpg" alt="An ice cream cone wiht streamers and confetti.">
+          </div>
           </div>
           <div="content">
             <p>Earn points and win pizes!
             </p>
+      </div>
+    </div>
+
+
+<div id="newsletter">	
+<div class="newsletter-sign-up">
+ <div class="content center">
+            <h2>Newsletter</h2>
+	    <div class="striking2">Sign-up for the newsletter!</div>
+          </div>
+          <div class="email">
+            <span>
+            Stay connected!
+            </span>
+            <div class=buttonGroup2>
+              <div class="button3"><a href="#">Submit</a></div>
+            </div>
+          </div>
         </div>
       </div>
-	
-
-</div>
-</div>
-
+    </div>
+  
 
   <!--Footer-->
   <footer class="page-footer">
