Align features and add form

--- a/index.html
+++ b/index.html
@@ -95,15 +95,15 @@
           <div class="image-container">
             <img src="./images/pistaschio-ice-cream-square.jpg" alt="A close-up of pistaschio ice cream.">
           </div>
-          </div>
-          <div="content">
-            <p>But that's not all! The app also features a rating system, allowing you to share your experiences and
-              help
-              other ice cream enthusiasts find the best pistaschio treats. Help ice cream fans crave their sweet tooth.
-            </p>
-      
+        </div>
+        <div="content">
+          <p>But that's not all! The app also features a rating system, allowing you to share your experiences and
+            help
+            other ice cream enthusiasts find the best pistaschio treats. Help ice cream fans crave their sweet tooth.
+          </p>
+
       </div>
-</div>
+    </div>
 
     <div id="features2">
       <div class="feature row3">
@@ -111,12 +111,13 @@
           <div class="image-container">
             <img src="./images/ice-cream-flavors-square.jpg" alt="A lot of ice cream flavors.">
           </div>
-          </div>
-          <div="content">
-            <p>Looking for a scoop of camaraderie? Connect with fellow ice cream aficionados and join the Twemary community
-        today!
-        Make every moment a sweet one!
-            </p>
+        </div>
+        <div="content">
+          <p>Looking for a scoop of camaraderie? Connect with fellow ice cream aficionados and join the Twemary
+            community
+            today!
+            Make every moment a sweet one!
+          </p>
       </div>
 
 
@@ -125,32 +126,49 @@
           <div class="image-container">
             <img src="./images/ice-cream-celebration-square.jpg" alt="An ice cream cone wiht streamers and confetti.">
           </div>
-          </div>
-          <div="content">
-            <p>Earn points and win pizes!
-            </p>
+        </div>
+        <div="content">
+          <p>Earn points and win pizes!
+          </p>
       </div>
     </div>
 
 
-<div id="newsletter">	
-<div class="newsletter-sign-up">
- <div class="content center">
-            <h2>Newsletter</h2>
-	    <div class="striking2">Sign-up for the newsletter!</div>
+    <div id="newsletter">
+      <div class="newsletter-sign-up">
+        <div class="content center">
+          <h2>Newsletter</h2>
+          <div class="striking2">Sign-up for the newsletter!</div>
+          <div class="signupForm">
           </div>
-          <div class="email">
+          <form action="" class="form">
+            <h2 class="title">Sign up</h2>
             <span>
-            Stay connected!
+              Stay connected!
             </span>
-            <div class=buttonGroup2>
-              <div class="button3"><a href="#">Submit</a></div>
+
+            <div class="inputContainer">
+              <input type="text" class=" input" placeholder="Jane">
+              <label for="" class="label">First Name</label>
             </div>
-          </div>
+
+            <div class="inputContainer">
+              <input type="text" class="input "placeholder="Smith">
+              <label for="" class="label">Last Name</label>
+            </div>
+
+            <div class="inputContainer">
+              <input type="text" class=" input" placeholder="abc@email.com">
+              <label for="" class="label">Email</label>
+            </div>
+
+            <input type="submit" class="submitBtn" value="Sign up">
+          </form>
         </div>
       </div>
     </div>
-  
+  </div>
+
 
   <!--Footer-->
   <footer class="page-footer">
