Add html and style to newsletter sign-up

--- a/index.html
+++ b/index.html
@@ -135,54 +135,45 @@
 
 
     <div id="newsletter">
-      <div class="newsletter-sign-up">
-        <div class="content center">
+      <div class="signupForm">
+        <form action="" class="form">
           <h2>Newsletter</h2>
           <div class="striking2">Sign-up for the newsletter!</div>
-          <div class="signupForm">
+
+          <div class="inputContainer">
+            <input type="text" class=" input" placeholder="a">
+            <label for="" class="label">First Name</label>
           </div>
-          <form action="" class="form">
-            <h2 class="title">Sign up</h2>
-            <span>
-              Stay connected!
-            </span>
 
-            <div class="inputContainer">
-              <input type="text" class=" input" placeholder="Jane">
-              <label for="" class="label">First Name</label>
-            </div>
+          <div class="inputContainer">
+            <input type="text" class="input " placeholder="a">
+            <label for="" class="label">Last Name</label>
+          </div>
 
-            <div class="inputContainer">
-              <input type="text" class="input "placeholder="Smith">
-              <label for="" class="label">Last Name</label>
-            </div>
+          <div class="inputContainer">
+            <input type="text" class=" input" placeholder="a">
+            <label for="" class="label">Email</label>
+          </div>
 
-            <div class="inputContainer">
-              <input type="text" class=" input" placeholder="abc@email.com">
-              <label for="" class="label">Email</label>
-            </div>
-
-            <input type="submit" class="submitBtn" value="Sign up">
-          </form>
-        </div>
+          <input type="submit" class="submitBtn" value="Sign up">
+        </form>
       </div>
     </div>
-  </div>
 
 
-  <!--Footer-->
-  <footer class="page-footer">
-    <div class="page-footer-content fixed-width clearfix">
-      <ul>
-        <li><a href="#"><em>Home</em></a></li>
-        <li><a href="about.html"><em>About</em></a></li>
-        <li><a href="contact.html"><em>Contact</em></a></li>
-      </ul>
-      <p class="copyright">
-        &#169 2024
-      </p>
-    </div>
-  </footer>
+    <!--Footer-->
+    <footer class="page-footer">
+      <div class="page-footer-content fixed-width clearfix">
+        <ul>
+          <li><a href="#"><em>Home</em></a></li>
+          <li><a href="about.html"><em>About</em></a></li>
+          <li><a href="contact.html"><em>Contact</em></a></li>
+        </ul>
+        <p class="copyright">
+          &#169 2024
+        </p>
+      </div>
+    </footer>
 </body>
 
 </html>
