Fix media queries add JavaScript file Fix CTA media queries for viewability on smaller screensizes Add h2 tag to features Hid detailed information for features so it would appear on click Add JavaScript file for interactivity on features section

--- a/index.html
+++ b/index.html
@@ -77,15 +77,16 @@
         <div class="center">
           <div class="image-container">
             <img src="./images/ice-cream-hand-square.jpg" alt="Someone holding an ice cream cone.">
-          </div>
+</div>          
+</div>
           <div="content">
-            <p>With this app, you can easily find delicious ice cream, no matter where you are!
+	    <h3>Find Your Flavor</h3>
+            <p class="textOne">With this app, you can easily find delicious ice cream, no matter where you are!
               Whether
               you're at home, at work, or even on a road trip, just open the app and voila! It'll guide you to the
               sweetest delights.
             </p>
-        </div>
-      </div>
+</div>
 
 
 
@@ -97,7 +98,8 @@
           </div>
         </div>
         <div="content">
-          <p>But that's not all! The app also features a rating system, allowing you to share your experiences and
+	<h3>Rate Your Treats</h3>
+          <p class="textTwo">But that's not all! The app also features a rating system, allowing you to share your experiences and
             help
             other ice cream enthusiasts find the best pistaschio treats. Help ice cream fans crave their sweet tooth.
           </p>
@@ -113,7 +115,8 @@
           </div>
         </div>
         <div="content">
-          <p>Looking for a scoop of camaraderie? Connect with fellow ice cream aficionados and join the Twemary
+	<h3>Share a Scoop</h3>
+          <p class="textThree">Looking for a scoop of camaraderie? Connect with fellow ice cream aficionados and join the Twemary
             community
             today!
             Make every moment a sweet one!
@@ -124,11 +127,12 @@
       <div class="feature row4">
         <div class="center">
           <div class="image-container">
-            <img src="./images/ice-cream-celebration-square.jpg" alt="An ice cream cone wiht streamers and confetti.">
+            <img src="./images/ice-cream-celebration-square.jpg" alt="An ice cream cone with streamers and confetti.">
           </div>
         </div>
         <div="content">
-          <p>Earn points and win pizes!
+	<h3>Points and Prizes</h3>
+          <p class="textFour">Earn points and win pizes!
           </p>
       </div>
     </div>
@@ -174,6 +178,9 @@
         </p>
       </div>
     </footer>
+
+<script src="scripts/twemary.js">
+</script>
 </body>
 
 </html>
