Update features to attempt hiddeen and show text

--- a/index.html
+++ b/index.html
@@ -81,9 +81,8 @@
 </div>
           <div="content">
 	    <h3>Find Your Flavor</h3>
-            <p class="textOne">With this app, you can easily find delicious ice cream, no matter where you are!
-              Whether
-              you're at home, at work, or even on a road trip, just open the app and voila! It'll guide you to the
+            <p id="flavor" class="textOne description">With this app, you can easily find delicious ice cream, no matter where you are!
+              Whether you're at home, at work, or even on a road trip, just open the app and voila! It'll guide you to the
               sweetest delights.
             </p>
 </div>
@@ -99,7 +98,7 @@
         </div>
         <div="content">
 	<h3>Rate Your Treats</h3>
-          <p class="textTwo">But that's not all! The app also features a rating system, allowing you to share your experiences and
+          <p id="rating" class="textTwo description">But that's not all! The app also features a rating system, allowing you to share your experiences and
             help
             other ice cream enthusiasts find the best pistaschio treats. Help ice cream fans crave their sweet tooth.
           </p>
@@ -116,7 +115,7 @@
         </div>
         <div="content">
 	<h3>Share a Scoop</h3>
-          <p class="textThree">Looking for a scoop of camaraderie? Connect with fellow ice cream aficionados and join the Twemary
+          <p id="community" class="textThree description">Looking for a scoop of camaraderie? Connect with fellow ice cream aficionados and join the Twemary
             community
             today!
             Make every moment a sweet one!
@@ -132,7 +131,7 @@
         </div>
         <div="content">
 	<h3>Points and Prizes</h3>
-          <p class="textFour">Earn points and win pizes!
+          <p class="textFour description">Earn points and win pizes!
           </p>
       </div>
     </div>
@@ -178,6 +177,7 @@
         </p>
       </div>
     </footer>
+
 <script src="scripts/twemary.js">
 </script>
 </body>
