Update html and css with semantic tags Update JavaScript with additional attempts

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!--navigation-->
   <header>
     <h1>Twemary</h1>
-    <div class="naviagation-bar">
+    <section class="naviagation-bar">
       <a href="#"><img src="./images/TwemaryLogoTypeOW.svg" alt="logo" class="logo"></a>
       <nav class="head-nav">
         <ul>
@@ -39,18 +39,18 @@
           <li><a href="contact.html"><em>Contact</em></a></li>
         </ul>
       </nav>
-    </div>
+    </section>
 
   </header>
 
 
   <!--main content-->
-  <div class="main-content">
+  <main>
 
     <!--CTA-->
 
     <!-- Sign Up Section -->
-    <div id="sign-up-section" class="hero">
+    <section id="sign-up-section" class="hero">
       <div id="sign-up-cta">
         <div class="content center">
           <div class="cta-header">
@@ -68,54 +68,57 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
 
 
     <!-- Features -->
-    <div id="features">
+    <section id="features">
       <div class="feature row1">
         <div class="center">
-          <div class="image-container">
+          <div id='image-one' class="image-container">
             <img src="./images/ice-cream-hand-square.jpg" alt="Someone holding an ice cream cone.">
-</div>          
-</div>
-          <div="content">
-	    <h3>Find Your Flavor</h3>
-            <p id="flavor" class="textOne description">With this app, you can easily find delicious ice cream, no matter where you are!
-              Whether you're at home, at work, or even on a road trip, just open the app and voila! It'll guide you to the
-              sweetest delights.
-            </p>
-</div>
+          </div>
+        </div>
+        <div="content">
+          <h3>Find Your Flavor</h3>
+          <p id="flavor" class="textOne description">With this app, you can easily find delicious ice cream, no matter
+            where you are!
+            Whether you're at home, at work, or even on a road trip, just open the app and voila! It'll guide you to the
+            sweetest delights.
+          </p>
+      </div>
 
 
 
 
       <div class="feature row2">
         <div class="center">
-          <div class="image-container">
+          <div id='image-two' class="image-container">
             <img src="./images/pistaschio-ice-cream-square.jpg" alt="A close-up of pistaschio ice cream.">
           </div>
         </div>
         <div="content">
-	<h3>Rate Your Treats</h3>
-          <p id="rating" class="textTwo description">But that's not all! The app also features a rating system, allowing you to share your experiences and
+          <h3>Rate Your Treats</h3>
+          <p id="rating" class="textTwo description">But that's not all! The app also features a rating system, allowing
+            you to share your experiences and
             help
             other ice cream enthusiasts find the best pistaschio treats. Help ice cream fans crave their sweet tooth.
           </p>
 
       </div>
-    </div>
+    </section>
 
-    <div id="features2">
+    <section id="features2">
       <div class="feature row3">
         <div class="center">
-          <div class="image-container">
+          <div id='image-three' class="image-container">
             <img src="./images/ice-cream-flavors-square.jpg" alt="A lot of ice cream flavors.">
           </div>
         </div>
         <div="content">
-	<h3>Share a Scoop</h3>
-          <p id="community" class="textThree description">Looking for a scoop of camaraderie? Connect with fellow ice cream aficionados and join the Twemary
+          <h3>Share a Scoop</h3>
+          <p id="community" class="textThree description">Looking for a scoop of camaraderie? Connect with fellow ice
+            cream aficionados and join the Twemary
             community
             today!
             Make every moment a sweet one!
@@ -125,16 +128,16 @@
 
       <div class="feature row4">
         <div class="center">
-          <div class="image-container">
+          <div id='imagefour' class="image-container">
             <img src="./images/ice-cream-celebration-square.jpg" alt="An ice cream cone with streamers and confetti.">
           </div>
         </div>
         <div="content">
-	<h3>Points and Prizes</h3>
+          <h3>Points and Prizes</h3>
           <p class="textFour description">Earn points and win pizes!
           </p>
       </div>
-    </div>
+    </section>
 
 
     <div id="newsletter">
@@ -163,7 +166,7 @@
       </div>
     </div>
 
-
+  </main>
     <!--Footer-->
     <footer class="page-footer">
       <div class="page-footer-content fixed-width clearfix">
@@ -178,8 +181,8 @@
       </div>
     </footer>
 
-<script src="scripts/twemary.js">
-</script>
+    <script src="scripts/twemary.js">
+    </script>
 </body>
 
 </html>
