Add form validations

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="feature row1">
         <div class="center">
           <div id='image-one' class="image-container">
-            <img src="./images/ice-cream-hand-square.jpg" alt="Someone holding an ice cream cone.">
+            <img src="./images/ice-cream-hand-square.jpg" alt="Someone holding an ice cream cone." class="image">
           </div>
         </div>
         <div="content">
@@ -147,18 +147,18 @@
           <div class="striking2">Sign-up for the newsletter!</div>
 
           <div class="inputContainer">
-            <input type="text" class=" input" placeholder="a">
-            <label for="" class="label">First Name</label>
+            <input id="firstName" name="firstName" type="text" class="input" placeholder="a" required>
+            <label for="firstName" class="label">First Name</label>
           </div>
 
           <div class="inputContainer">
-            <input type="text" class="input " placeholder="a">
-            <label for="" class="label">Last Name</label>
+            <input id="lastName" name="lastName" type="text" class="input " placeholder="a" required>
+            <label for="lastName" class="label">Last Name</label>
           </div>
 
           <div class="inputContainer">
-            <input type="text" class=" input" placeholder="a">
-            <label for="" class="label">Email</label>
+            <input id="email" name="email" type="text" class=" input" placeholder="a" required>
+            <label for="email" class="label">Email</label>
           </div>
 
           <input type="submit" class="submitBtn" value="Sign up">
@@ -167,22 +167,22 @@
     </div>
 
   </main>
-    <!--Footer-->
-    <footer class="page-footer">
-      <div class="page-footer-content fixed-width clearfix">
-        <ul>
-          <li><a href="#"><em>Home</em></a></li>
-          <li><a href="about.html"><em>About</em></a></li>
-          <li><a href="contact.html"><em>Contact</em></a></li>
-        </ul>
-        <p class="copyright">
-          &#169 2024
-        </p>
-      </div>
-    </footer>
+  <!--Footer-->
+  <footer class="page-footer">
+    <div class="page-footer-content fixed-width clearfix">
+      <ul>
+        <li><a href="#"><em>Home</em></a></li>
+        <li><a href="about.html"><em>About</em></a></li>
+        <li><a href="contact.html"><em>Contact</em></a></li>
+      </ul>
+      <p class="copyright">
+        &#169 2024
+      </p>
+    </div>
+  </footer>
 
-    <script src="scripts/twemary.js">
-    </script>
+  <script src="scripts/twemary.js">
+  </script>
 </body>
 
 </html>
