Update HTML and CSS with semantic tags HTML and CSS updates with semantic tags for better clarification of content.

--- a/index.html
+++ b/index.html
@@ -47,27 +47,27 @@
   <!--main content-->
   <main>
 
-    <!--CTA-->
+    <!--Hero and CTA-->
 
     <!-- Sign Up Section -->
     <section id="sign-up-section" class="hero">
-      <div id="sign-up-cta">
+      <section id="sign-up-cta">
         <div class="content center">
           <div class="cta-header">
             <h2>Twemary App!</h2>
             <div class="striking">Ice cream with community.</div>
           </div>
-          <div class="email">
-            <span>
+          <div class="download">
+            <p class="app">
               Embrace your sweet tooth and discover the world of ice cream delights at your fingertips - download the
-              Twemary app today!</span>
-            <div class=buttonGroup>
-              <div class="button"><a href="#">Download from Google Play</a></div>
-              <div class="button2"><a href="#">Download from App Store</a></div>
-            </div>
+              Twemary app today!</p>
+            <section class=buttonGroup>
+              <button class="button"><a href="#">Download from Google Play</a></button>
+              <button class="button2"><a href="#">Download from App Store</a></button>
+            </section>
           </div>
         </div>
-      </div>
+      </section>
     </section>
 
 
