--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="content center">
           <div class="cta-header">
             <h2>Twemary App!</h2>
-            <div class="striking">Ice cream with community.</div>
+            <p class="striking">Ice cream with community.</p>
           </div>
           <div class="download">
             <p class="app">
@@ -147,7 +147,7 @@
           <div class="striking2">Sign-up for the newsletter!</div>
 
           <div class="inputContainer">
-            <input id="firstName" name="firstName" type="text" class= "input" placeholder="a" required>
+            <input id="firstName" name="firstName" type="text" class="input" placeholder="a" required>
             <label for="firstName" class="label">First Name</label>
           </div>
 
@@ -167,22 +167,22 @@
     </div>
 
   </main>
-    <!--Footer-->
-    <footer class="page-footer">
-      <div class="page-footer-content fixed-width clearfix">
-        <ul>
-          <li><a href="#"><em>Home</em></a></li>
-          <li><a href="about.html"><em>About</em></a></li>
-          <li><a href="contact.html"><em>Contact</em></a></li>
-        </ul>
-        <p class="copyright">
-          &#169 2024
-        </p>
-      </div>
-    </footer>
+  <!--Footer-->
+  <footer class="page-footer">
+    <div class="page-footer-content fixed-width clearfix">
+      <ul>
+        <li><a href="#"><em>Home</em></a></li>
+        <li><a href="about.html"><em>About</em></a></li>
+        <li><a href="contact.html"><em>Contact</em></a></li>
+      </ul>
+      <p class="copyright">
+        &#169 2024
+      </p>
+    </div>
+  </footer>
 
-    <script src="scripts/twemary.js">
-    </script>
+  <script src="scripts/twemary.js">
+  </script>
 </body>
 
 </html>
