Add gradient to hero and footer Update for styling

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <section id="sign-up-cta">
         <div class="content center">
           <div class="cta-header">
-            <h2>Twemary App!</h2>
+            <h2 class="app-name">Twemary App!</h2>
             <p class="striking">Ice cream with community.</p>
           </div>
           <div class="download">
@@ -139,6 +139,7 @@
       </div>
     </section>
 
+    <!-- Newsletter SIgn-up Form -->
 
     <div id="newsletter">
       <div class="signupForm">
