Update style for refined branding

--- a/index.html
+++ b/index.html
@@ -139,16 +139,16 @@
       </div>
     </section>
 
-    <!-- Newsletter SIgn-up Form -->
+<!-- Newsletter SIgn-up Form -->
 
     <div id="newsletter">
       <div class="signupForm">
         <form action="" class="form">
-          <h2>Newsletter</h2>
+          <h2 class="newsletter-title">Newsletter</h2>
           <div class="striking2">Sign-up for the newsletter!</div>
 
           <div class="inputContainer">
-            <input id="firstName" name="firstName" type="text" class="input" placeholder="a" required>
+            <input id="firstName" name="firstName" type="text" class= "input" placeholder="a" required>
             <label for="firstName" class="label">First Name</label>
           </div>
 
@@ -168,22 +168,22 @@
     </div>
 
   </main>
-  <!--Footer-->
-  <footer class="page-footer">
-    <div class="page-footer-content fixed-width clearfix">
-      <ul>
-        <li><a href="#"><em>Home</em></a></li>
-        <li><a href="about.html"><em>About</em></a></li>
-        <li><a href="contact.html"><em>Contact</em></a></li>
-      </ul>
-      <p class="copyright">
-        &#169 2024
-      </p>
-    </div>
-  </footer>
+    <!--Footer-->
+    <footer class="page-footer">
+      <div class="page-footer-content fixed-width clearfix">
+        <ul>
+          <li><a href="#"><em>Home</em></a></li>
+          <li><a href="about.html"><em>About</em></a></li>
+          <li><a href="contact.html"><em>Contact</em></a></li>
+        </ul>
+        <p class="copyright">
+          &#169 2024
+        </p>
+      </div>
+    </footer>
 
-  <script src="scripts/twemary.js">
-  </script>
+    <script src="scripts/twemary.js">
+    </script>
 </body>
 
 </html>
