Add semantic form tags

--- a/index.html
+++ b/index.html
@@ -139,51 +139,51 @@
       </div>
     </section>
 
-<!-- Newsletter SIgn-up Form -->
+    <!-- Newsletter SIgn-up Form -->
 
-    <div id="newsletter">
-      <div class="signupForm">
-        <form action="" class="form">
+    <section id="newsletter">
+      <form class="signupForm">
+        <div action="" class="news-form">
           <h2 class="newsletter-title">Newsletter</h2>
-          <div class="striking2">Sign-up for the newsletter!</div>
+          <p class="striking2">Sign-up for the newsletter!</p>
 
           <div class="inputContainer">
-            <input id="firstName" name="firstName" type="text" class= "input" placeholder="a" required>
             <label for="firstName" class="label">First Name</label>
+            <input id="firstName" name="firstName" type="text" class="input" placeholder="Test" required>
           </div>
 
           <div class="inputContainer">
-            <input id="lastName" name="lastName" type="text" class="input " placeholder="a" required>
             <label for="lastName" class="label">Last Name</label>
+            <input id="lastName" name="lastName" type="text" class="input" placeholder="Test" required>
           </div>
 
           <div class="inputContainer">
-            <input id="email" name="email" type="text" class=" input" placeholder="a" required>
             <label for="email" class="label">Email</label>
+            <input id="email" name="email" type="text" class=" input" placeholder="Test" required>
           </div>
 
           <input type="submit" class="submitBtn" value="Sign up">
-        </form>
-      </div>
-    </div>
+        </div>
+      </form>
+    </section>
 
   </main>
-    <!--Footer-->
-    <footer class="page-footer">
-      <div class="page-footer-content fixed-width clearfix">
-        <ul>
-          <li><a href="#"><em>Home</em></a></li>
-          <li><a href="about.html"><em>About</em></a></li>
-          <li><a href="contact.html"><em>Contact</em></a></li>
-        </ul>
-        <p class="copyright">
-          &#169 2024
-        </p>
-      </div>
-    </footer>
+  <!--Footer-->
+  <footer class="page-footer">
+    <div class="page-footer-content fixed-width clearfix">
+      <ul>
+        <li><a href="#"><em>Home</em></a></li>
+        <li><a href="about.html"><em>About</em></a></li>
+        <li><a href="contact.html"><em>Contact</em></a></li>
+      </ul>
+      <p class="copyright">
+        &#169 2024
+      </p>
+    </div>
+  </footer>
 
-    <script src="scripts/twemary.js">
-    </script>
+  <script src="scripts/twemary.js">
+  </script>
 </body>
 
 </html>
