--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <nav class="head-nav">
         <ul>
           <li><a href="#"><em>Home</em></a></li>
-          <li><a href="about.html"><em>About</em></a></li>
+          <!-- <li><a href="about.html"><em>About</em></a></li> -->
           <li><a href="contact.html"><em>Contact</em></a></li>
         </ul>
       </nav>
@@ -139,7 +139,7 @@
       </div>
     </section>
 
-    <!-- Newsletter SIgn-up Form -->
+<!-- Newsletter SIgn-up Form -->
 
     <section id="newsletter">
       <form class="signupForm">
@@ -148,17 +148,17 @@
           <p class="striking2">Sign-up for the newsletter!</p>
 
           <div class="inputContainer">
-            <label for="firstName" class="label">First Name</label>
+	    <label for="firstName" class="label">First Name</label>
             <input id="firstName" name="firstName" type="text" class="input" placeholder="Test" required>
           </div>
 
           <div class="inputContainer">
-            <label for="lastName" class="label">Last Name</label>
+	    <label for="lastName" class="label">Last Name</label>
             <input id="lastName" name="lastName" type="text" class="input" placeholder="Test" required>
           </div>
 
           <div class="inputContainer">
-            <label for="email" class="label">Email</label>
+	    <label for="email" class="label">Email</label>
             <input id="email" name="email" type="text" class=" input" placeholder="Test" required>
           </div>
 
@@ -168,22 +168,23 @@
     </section>
 
   </main>
-  <!--Footer-->
-  <footer class="page-footer">
-    <div class="page-footer-content fixed-width clearfix">
-      <ul>
-        <li><a href="#"><em>Home</em></a></li>
-        <li><a href="about.html"><em>About</em></a></li>
-        <li><a href="contact.html"><em>Contact</em></a></li>
-      </ul>
-      <p class="copyright">
-        &#169 2024
-      </p>
-    </div>
-  </footer>
-
-  <script src="scripts/twemary.js">
-  </script>
+    <!--Footer-->
+    <footer class="page-footer">
+      <section class="page-footer-content fixed-width clearfix">
+        <span class="copyright">
+          &copy 2024 Rebecca Crecelius
+        </span>
+        <nav>
+        <ul class="footer-link">
+          <li><a href="#">Home</a></li>
+         <!-- <li><a href="about.html"><em>About</em></a></li> -->
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </section>
+    </footer>  
+    <script src="scripts/twemary.js">
+    </script>
 </body>
 
 </html>
