--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <div class="content center">
           <div class="cta-header">
             <h2 class="app-name">Twemary App!</h2>
+            
             <p class="striking">Ice cream with community.</p>
           </div>
           <div class="download">
@@ -79,7 +80,18 @@
             <img src="./images/ice-cream-hand-square.jpg" alt="Someone holding an ice cream cone." class="image">
           </div>
         </div>
-        <div="content">
+
+
+        <div id="hotspot1" class="hotspot">
+          <div class="empty-text">Find Your Flavor
+          </div>
+          <p class="hover-popup textOne">
+            With this app, you can easily find delicious ice cream, no matter where you are! Whether you're at home, at work, or even on a road trip, just open the app and voila! It'll guide you to the sweetest delights.
+          </p>
+        </div>
+    </div>
+<!--
+        <div class ="content">
           <h3>Find Your Flavor</h3>
           <p id="flavor" class="textOne description">With this app, you can easily find delicious ice cream, no matter
             where you are!
@@ -87,9 +99,7 @@
             sweetest delights.
           </p>
       </div>
-
-
-
+    -->
 
       <div class="feature row2">
         <div class="center">
@@ -97,6 +107,16 @@
             <img src="./images/pistaschio-ice-cream-square.jpg" alt="A close-up of pistaschio ice cream.">
           </div>
         </div>
+        <div id="hotspot1" class="hotspot">
+          <div class="empty-text">Rate Your Treats
+          </div>
+          <p class="hover-popup textOne">
+            But that's not all! The app also features a rating system, allowing you to share your experiences and help other ice cream enthusiasts find the best pistaschio treats. Help ice cream fans crave their sweet tooth.
+          </p>
+        </div>
+    </div>
+
+<!--     
         <div="content">
           <h3>Rate Your Treats</h3>
           <p id="rating" class="textTwo description">But that's not all! The app also features a rating system, allowing
@@ -104,8 +124,8 @@
             help
             other ice cream enthusiasts find the best pistaschio treats. Help ice cream fans crave their sweet tooth.
           </p>
-
       </div>
+    -->
     </section>
 
     <section id="features2">
@@ -115,6 +135,16 @@
             <img src="./images/ice-cream-flavors-square.jpg" alt="A lot of ice cream flavors.">
           </div>
         </div>
+        <div id="hotspot2" class="hotspot">
+          <div class="empty-text">Share Scoop
+          </div>
+          <p class="hover-popup textOne">
+            Looking for a scoop of camaraderie? Connect with fellow ice cream aficionados and join the Twemary community today! Make every moment a sweet one!
+          </p>
+        </div>
+    </div>
+
+<!--
         <div="content">
           <h3>Share a Scoop</h3>
           <p id="community" class="textThree description">Looking for a scoop of camaraderie? Connect with fellow ice
@@ -124,7 +154,7 @@
             Make every moment a sweet one!
           </p>
       </div>
-
+    -->
 
       <div class="feature row4">
         <div class="center">
@@ -132,11 +162,22 @@
             <img src="./images/ice-cream-celebration-square.jpg" alt="An ice cream cone with streamers and confetti.">
           </div>
         </div>
+        <div id="hotspot1" class="hotspot">
+          <div class="empty-text">Points and Prizes
+          </div>
+          <p class="hover-popup textOne">
+            Earn points and win prizes!
+          </p>
+        </div>
+    </div>
+
+<!--      
         <div="content">
           <h3>Points and Prizes</h3>
           <p class="textFour description">Earn points and win pizes!
           </p>
       </div>
+-->  
     </section>
 
 <!-- Newsletter SIgn-up Form -->
@@ -183,8 +224,7 @@
       </nav>
     </section>
     </footer>  
-    <script src="scripts/twemary.js">
-    </script>
+    <script src="scripts/twemary.js"></script>
 </body>
 
 </html>
