Style newsletter sign-up Fix hotspot alignment

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rozha+One&display=swap" rel="stylesheet">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Concert+One&display=swap" rel="stylesheet">
+
+
   <link href="css/style.css" type="text/css" rel="stylesheet">
   <meta content="width=device-width, initial-scale=1" name="viewport" />
 </head>
@@ -77,6 +82,15 @@
       <div class="feature row1">
         <div class="center">
           <div id='image-one' class="image-container">
+            <!--
+            <video id="background-video" autoplay loop muted poster="images/ice-cream-scoop-video.mp4">
+              <source src="images/ice-cream-scoop-video.mp4" type="video/mp4">
+            </video>
+          -->
+
+          <!--
+            <video autoplay loop muted poster="images/ice-cream-scoop-video.mp4">><source src="images/ice-cream-scoop-video.mp4" type="video/mp4"></video>
+          -->
             <img src="./images/ice-cream-hand-square.jpg" alt="Someone holding an ice cream cone." class="image">
           </div>
         </div>
@@ -190,17 +204,17 @@
 
           <div class="inputContainer">
 	    <label for="firstName" class="label">First Name</label>
-            <input id="firstName" name="firstName" type="text" class="input" placeholder="Test" required>
+            <input id="firstName" name="firstName" type="text" class="input" placeholder="Paris" required>
           </div>
 
           <div class="inputContainer">
 	    <label for="lastName" class="label">Last Name</label>
-            <input id="lastName" name="lastName" type="text" class="input" placeholder="Test" required>
+            <input id="lastName" name="lastName" type="text" class="input" placeholder="Smith" required>
           </div>
 
           <div class="inputContainer">
 	    <label for="email" class="label">Email</label>
-            <input id="email" name="email" type="text" class=" input" placeholder="Test" required>
+            <input id="email" name="email" type="text" class=" input" placeholder="paris@email.com" required>
           </div>
 
           <input type="submit" class="submitBtn" value="Sign up">
