Add video to container

--- a/index.html
+++ b/index.html
@@ -80,29 +80,21 @@
     <!-- Features -->
     <section id="features">
       <div class="feature row1">
+        <h2>Find Your Flavor</h2>
         <div class="center">
           <div id='image-one' class="image-container">
-            <!--
-            <video id="background-video" autoplay loop muted poster="images/ice-cream-scoop-video.mp4">
-              <source src="images/ice-cream-scoop-video.mp4" type="video/mp4">
-            </video>
-          -->
+            
+          <div id="hotspot1" class="hotspot">
+            <div class="empty-text">
+            <video autoplay loop muted poster="images/ice-cream-scoop-video.mp4" source src="images/ice-cream-scoop-video.mp4" type="video/mp4"></video>
+            </div>
 
-          <!--
-            <video autoplay loop muted poster="images/ice-cream-scoop-video.mp4">><source src="images/ice-cream-scoop-video.mp4" type="video/mp4"></video>
-          -->
-            <img src="./images/ice-cream-hand-square.jpg" alt="Someone holding an ice cream cone." class="image">
+            <p class="hover-popup textOne">
+              With this app, you can easily find delicious ice cream, no matter where you are! Whether you're at home, at work, or even on a road trip, just open the app and voila! It'll guide you to the sweetest delights.
+            </p>
           </div>
-        </div>
-
-
-        <div id="hotspot1" class="hotspot">
-          <div class="empty-text">Find Your Flavor
           </div>
-          <p class="hover-popup textOne">
-            With this app, you can easily find delicious ice cream, no matter where you are! Whether you're at home, at work, or even on a road trip, just open the app and voila! It'll guide you to the sweetest delights.
-          </p>
-        </div>
+          </div>
     </div>
 <!--
         <div class ="content">
