Update video for fourth feature

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
     </section>
 
     <section id="features2">
+
       <div class="feature row3">
       <h2>Share a Scoop</h2>
       <p> Looking for a scoop of camaraderie? Connect with fellow ice cream aficionados and join the Twemary community today! Make every moment a sweet one!</p>
@@ -168,21 +169,24 @@
       </div>
     -->
 
-      <div class="feature row4">
-      <h2>Points and Prizes</h2>
-      <p>Reward your sweet tooth! With Twemary you can earn points and win prizes!</p>
-        <div class="center">
-          <div id='image-four' class="image-container">
+  <div class="feature row">
+  <h2>Points and Prizes</h2>
+  <p>Reward your sweet tooth! With Twemary you can earn points and win prizes!</p>
+    <div class="center">
+      <div id='image-four' class="image-container">
 
-        <div id="hotspot2" class="hotspot">
-          <div class="empty-text">
-            <video autoplay loop muted poster="images/vecteezy_animated-video-of-the-1st-place-trophy-with-a-rotating_30511852.mov " source src="images/vecteezy_animated-video-of-the-1st-place-trophy-with-a-rotating_30511852.mov" type="video/mp4"></video>
-          </div>
-          <p class="hover-popup textOne">A video from Vecteezy a first place prize. Original video may be found at <a href="https://www.vecteezy.com/free-videos/1st">1st Stock Videos by Vecteezy</a>
-        </p>
-        </div>
+    <div id="hotspot2" class="hotspot">
+      <div class="empty-text">
+        <video autoplay loop muted poster="images/vecteezy_smiling-successful-businesswoman-with-gold-trophy-happy_13051384.mp4" source src="images/vecteezy_smiling-successful-businesswoman-with-gold-trophy-happy_13051384.mp4" type="video/mp4"></video>
+      </div>
+      <p class="hover-popup textOne">
+        A video from Vecteezy showing a woman celebrating her prize. Original video may be found at <a href="https://www.vecteezy.com/free-videos/woman">Woman Stock Videos by Vecteezy</a>
+      </p>
     </div>
-  </div>
+</div>
+</div>
+
+
 </div>
 
 
